# www-project-agent-memory-guard

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  ROADMAP.md  demo.py  index.md  info.md  leaders.md  pyproject.toml
.devcontainer/: devcontainer.json  welcome.md
.github/workflows/: ci.yml  clone.yml  memory-guard-scan.yml  publish.yml  scorecard.yml  track-referrers.yml  update-downloads.yml
action/: README.md  action.yml  scan.py
assets/: demo.cast
benchmarks/: README_langchain_real_agent_smoke_ru.md  langchain_e2e_memory_benchmark.py  langchain_real_agent_smoke.py  security_benchmark.py
benchmarks/results/: benchmark_comparison.md  benchmark_report.md  benchmark_results.json
benchmarks/results/comparison/: benchmark_comparison.md  benchmark_results.json
docs/guides/: secure-crewai-agent.md  secure-langgraph-agent.md  secure-mem0-agent.md
examples/: interactive_demo.py  policy.yaml  quickstart.py  record_demo.py
integrations/langchain-agent-memory-guard/: README.md  pyproject.toml
src/agent_memory_guard/: __init__.py  events.py  exceptions.py  guard.py  integrity.py  middleware.py  rag.py  scan.py  source_aware_guard.py  streaming.py  tools.py
tests/: test_autogen_openai_agents.py  test_demo.py  test_detectors.py  test_guard.py  test_integrity.py  test_langchain_e2e_memory_benchmark.py  test_memory_persistence_injection.py  test_policy.py  test_snapshots.py  test_source_aware_guard.py  test_source_risk.py  test_workflow_security.py
tests/benchmarks/: __init__.py  test_delayed_activation.py
(+28 files in other folders)
