[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-guard"
version = "0.2.1"
description = "Runtime defense layer that protects AI agent memory from poisoning attacks (OWASP ASI06)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "OWASP Agent Memory Guard" }]
keywords = ["owasp", "ai-security", "llm", "agents", "memory-poisoning", "asi06"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://owasp.org/www-project-agent-memory-guard/"
Source = "https://github.com/OWASP/www-project-agent-memory-guard"

[tool.setuptools.packages.find]
where = ["src"]
